Added basic functionality

--- a/src/app/overlay/overlay.component.html
+++ b/src/app/overlay/overlay.component.html
@@ -1,10 +1,8 @@
-<div class="overlay" [ngStyle]="{'display': displayPanel == true ? 'block' : 'none'}">
+<div class="overlay" [ngStyle]="{'display': displayPanel == true ? 'block' : 'none'}" >
 
-    <div class="panel" id="panel-body" (focusout)="saveNotes(tileId, ref.value)">
+    <div class="panel" id="panel-body" (focusout)="saveNotes(tileId, ref.value)" >
 
-        <textarea id="myText" #ref spellcheck="false">
-           {{card.notes}}
-        </textarea>
+        <textarea id="myText" #ref spellcheck="false">{{card.notes}}</textarea>
 
         <div class="actions">
             <div id="like" (click)="updateLike()">
@@ -13,7 +11,7 @@
             <div id="counter">
                 {{card.likes}}
             </div>
-            <div id="del" (click)="deleteCard(cardId)">
+            <div id="del" (click)="deleteCard()">
                 <img src="../../assets/delete.svg">
             </div>
         </div>
