--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card" [class]='card.tileId' [id]="card.id" (click)="updateCard(card.id)">
+<div class="card" [class]="'card'+card.tileId" [id]="card.id" (click)="updateCard(card.id)">
 
     <div class="notes">
         {{card.notes}}
