--- a/src/app/overlay/overlay.component.html
+++ b/src/app/overlay/overlay.component.html
@@ -1,6 +1,7 @@
-<div class="overlay" [ngStyle]="{'display': displayPanel == true ? 'block' : 'none'}" >
+<div class="overlay" [ngStyle]="{'display': displayPanel == true ? 'block' : 'none'}"
+    (click)="saveNotes(tileId, ref.value, $event)">
 
-    <div class="panel" id="panel-body" (focusout)="saveNotes(tileId, ref.value)" >
+    <div class="panel" id="panel-body">
 
         <textarea id="myText" #ref spellcheck="false">{{card.notes}}</textarea>
 
