--- a/src/app/overlay/overlay.component.html
+++ b/src/app/overlay/overlay.component.html
@@ -1,4 +1,4 @@
-<div class="overlay" [ngStyle]="{'display': displayPanel == true ? 'block' : 'none'}"
+<div class="overlay" [ngStyle]="{'display': displayPanel == true ? 'flex' : 'none'}"
     (click)="saveNotes(ref.value, $event)">
 
     <div class="panel" id="panel-body">
