--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -3,14 +3,13 @@ img {
 }
 
 .card {
-  width: 250px;
+  width: 225px;
   height: 250px;
   justify-content: center;
   border-radius: 10px;
   padding: 10px;
   word-break: break-word;
   overflow: hidden;
-  background: aqua;
   margin: 5% 0 5% 0;
 }
 
@@ -20,4 +19,16 @@ img {
 
 .like {
   display: flex;
+}
+
+.card1 {
+  background: #c3ee8f;
+}
+
+.card2 {
+  background: #ffff88;
+}
+
+.card3 {
+  background: #eed3ff;
 }
