--- a/src/app/overlay/overlay.component.css
+++ b/src/app/overlay/overlay.component.css
@@ -1,9 +1,27 @@
+.overlay {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  top: 0;
+  z-index: 90;
+  background: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.3)
+  );
+  opacity: 0.8;
+  margin: 0;
+  width: 100%;
+  height: 100vh;
+  border-radius: 20px;
+  position: absolute;
+}
+
 .panel {
   border: 2px solid;
   border-radius: 10px;
   position: fixed;
-  margin-top: 15%;
-  margin-left: 33%;
+  z-index: 100;
 }
 
 img {
@@ -24,18 +42,4 @@ textarea {
   resize: none;
   padding: 8px;
   overflow-x: hidden;
-}
-
-.overlay {
-  z-index: 100;
-  background: beige;
-  opacity: 0.8;
-  margin: 0;
-  width: 100%;
-  height: 100vh;
-  margin-top: -110px;
-  border-radius: 20px;
-
-  position: absolute;
-  top: 8pc;
 }
