--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -6,7 +6,7 @@
 
     <div class="display">
         <div class="like">
-            <img src="../../assets/heartblue.svg" alt="">
+            <img src="../../assets/heart.svg" alt="">
             <div class="likes">
                 {{card.likes}}
             </div>
